--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "audio-streaming-example-skill",
+  "name": "kiss-fm-radio-streaming",
   "version": "2.0.0",
   "description": "A starter template for an Alexa audio streaming skill.",
   "main": "index.js",
